--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ ul li {
 	color: #ECEFF1;
 	background-color: #313131;
 	font-size: 15px;
-	font-family: 'Varela Round';
+	font-family: 'Awesome';
 	display: inline-block;
 	margin: 5px 5px;
 	border:  solid 2px #313131;
