--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lily+Script+One|Cabin|Varela+Round');
+@import url('https://fonts.googleapis.com/css?family=Lily+Script+One|Cabin|Awesome');
 
 body {
 	transform: translateY(100px);
